--- a/styles/style.css
+++ b/styles/style.css
@@ -10,22 +10,372 @@
 }
 
 .header {
+  position: relative;
+  background-color:  #F2F2F2;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-size: contain;
   /* parameters for the header section */
+}
+
+.z-index {
+  z-index: 1;
+}
+
+.no-margin {
+  margin: 0;
+  padding: 0;
+}
+
+.header__square-pic {
+  height: 568px;
+  width: 568px;
+}
+
+.logo {
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.logo_place_header {
+  background-image: url("../images/logo_place_header.png");
+  position:absolute;
+  top: 30px;
+  left: 64px;
+  height: 31px;
+  width: 154px;
+}
+
+.header__title {
+  display: flex;
+  margin-left: 64px;
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+}
+
+.header__subtitle {
+  width: 388px;
+  position:absolute;
+  bottom: 30px;
+  left: 64px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.header__link {
+  color: #2F80ED;
+}
+
+.header__main-illustration {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 608px;
+  width: 756px;
 }
 
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2F80ED ;
+  position: absolute;
+  top: 64px;
+  right: 0;
+}
+
+.two-columns {
+  display: flex;
+  align-content: space-between;
+  justify-self: center;
+  flex-direction: row;
+  margin: 100px auto;
+  min-width: 784px;
+  /* vvxcvxcvcxvcxvxc */
+}
+
+.two-columns__main-text {
+  flex-direction: column;
+  margin-bottom: 30px;
+  width: 80%;
+
+
+}
+
+.two-columns__brief {
+  width: 175px;
+  color: #2F80ED ;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin-left: inherit;
+  margin-right: inherit;
+  margin-top: 0;
+}
+
+.two-columns__paragraph {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin-right: auto;
+  margin-top: 0;
+
+}
+
+.middle-margin {
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.digits {
+  justify-content: center;
+}
+
+.section-title {
+  width: 60%;
+  line-height: 69px;
+  font-size: 60px;
+  font-weight: bold;
+  margin: auto;
+  text-align: center;
+}
+
+.section-subtitle {
+  text-align: center;
+  width: 60%;
+  line-height: 34px;
+  font-weight: normal;
+  font-size: 24px;
+  margin: 20px auto 60px;
+}
+
+.table {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  width: 1100px;
+  justify-content: space-between;
+}
+
+.table_theme_white {
+  margin: 60px auto 100px;
+  padding: 0;
+}
+
+.table__cell {
+  margin-right: auto;
+  margin-top: 60px;
+  width: 250px;
+}
+
+.table__heading {
+  margin-bottom: 20px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+
+.table__text {
+  line-height: 1.12;
+  font-size: 18px;
+  font-weight: normal;
+}
+.go_down20 {
+margin-top: 20px;
+}
+
+.feynman {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 790px;
+  padding: 0;
+}
+
+.feynman__image {
+  position: absolute;
+    bottom: 0;
+    left: 0;
+  max-width: 867px;
+  max-height: 637px;
+}
+
+.feynman__title {
+  width: 775px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  z-index: 1;
+  margin-bottom: 70px;
+  margin-top: 0px;
+}
+
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 1;
+  text-align: center;
+}
+
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  margin: 0;
+}
+
+.kaufman {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  color:white;
+  background-color:  #1F1F1F;
+}
+
+.section-title_theme_dark {
+  width: 60%;
+  text-align: center;
+  line-height: 69px;
+  font-size: 60px;
+  font-weight: bold;
+  margin: 90px auto 20px;
+}
+
+.section-subtitle_theme_dark {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0 auto;
 }
 
 /* including elements with key-value modifiers */
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
-  margin-right: 0;
+  color: rgb(54, 47, 47);
   margin-top: 80px;
+}
+
+
+.table__text_theme_dark {
+  color: white;
+  padding: 0;
+}
+
+.table__heading_theme_dark {
+  color: white;
+}
+.table_theme_dark {
+  margin: auto;
+  z-index: 1;
+  padding: 0;
+}
+
+
+.kaufman__triangle {
+  position: absolute;
+  background-image: url("../images/kaufman-triangle.svg");
+  right: -124px;
+  top: 0;
+  width: 660px;
+  height: 636px;
+}
+
+.footer {
+  min-height: 350px;
+  color: white;
+  background-color:  #1F1F1F;
+  padding-top: 150px;
+  padding-bottom: 40px;
+}
+
+
+.footer__columns {
+  position: relative;
+  width: 90%;
+  display: flex;
+  margin: auto;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-basis: 711px;
+  flex-direction: column;
+}
+
+.logo_place_footer {
+  background-image: url("../images/logo_place_footer.png");
+  height: 35px;
+  width: 183px;
+  justify-content: flex-start;
+}
+
+.footer__author {
+  margin: 0;
+  padding: 18px 0 18px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+
+.footer__column_content_about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer__column_heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.footer__list {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  padding: 0;
+  list-style: none;
+}
+
+.footer__column_content_social {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: end;
+}
+
+.footer__column-social-icons {
+height: 16px;
+width: 16px;
+text-decoration: none;
+}
+
+
+.footer__column-link {
+  color: #2F80ED;
 }
