--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+
 .page {
   min-width: 1100px;
   /* we don't know how to make mobile versions of websites yet, */
@@ -76,6 +77,7 @@
   height: 608px;
   width: 756px;
   object-fit: contain;
+  z-index: 1;
 }
 
 /* here we have two examples of selectors in order to remind you how to set styles for elements */
@@ -86,6 +88,7 @@
   position: absolute;
   top: 64px;
   right: 0;
+  z-index: 0;
 }
 
 .two-columns {
@@ -187,6 +190,14 @@
   font-weight: normal;
   margin-bottom: 20px;
 }
+/*
+.techniques {
+  margin: 0 auto 0;
+}
+.section-title_modifier {
+  line-height: 1.15px;
+} */
+
 
 .feynman {
   background-color: #F2F2F2;
