--- a/styles/style.css
+++ b/styles/style.css
@@ -23,15 +23,6 @@
   /* parameters for the header section */
 }
 
-.z-index {
-  z-index: 1;
-}
-
-.no-margin {
-  margin: 0;
-  padding: 0;
-}
-
 .logo {
   background-size: contain;
   background-repeat: no-repeat;
@@ -53,6 +44,7 @@
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
+  z-index: 1;
 }
 
 .header__subtitle {
@@ -63,6 +55,7 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  z-index: 2;
 }
 
 .header__link {
@@ -91,10 +84,14 @@
   z-index: 0;
 }
 
+/* .description {
+  margin: 0;
+} */
+
 .two-columns {
   display: flex;
   flex-direction: row;
-  margin: 100px auto;
+  margin: 100px auto 0;
   min-width: 784px;
   max-width: 80%;
   justify-content: space-between;
@@ -107,11 +104,11 @@
 
 .two-columns__brief {
   width: 175px;
-  color: #8a8a8b;
+  color:  #2F80ED ;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin-top: 0;
+  margin: 0;
 }
 
 .two-columns__paragraph {
@@ -119,13 +116,12 @@
   font-size: 24px;
   font-weight: normal;
   margin-right: auto;
-  margin-top: 0;
+  margin: 0;
 
 }
 
-.middle-margin {
+.two-columns__paragraph:last-of-type {
   margin-bottom: 30px;
-  margin-top: 30px;
 }
 
 .two-columns__span-accent {
@@ -137,7 +133,7 @@
 .digits {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 100px auto;
 }
 
 .section-title {
@@ -145,7 +141,7 @@
   line-height: 69px;
   font-size: 60px;
   font-weight: bold;
-  margin: 100px auto 20px;
+  margin: auto;
   text-align: center;
 }
 
@@ -188,8 +184,17 @@
   line-height: 1.12;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
+}
+
+.table__text:nth-child(2) {
   margin-bottom: 20px;
 }
+
+.table__text:nth-child(5) {
+  margin-bottom: 20px;
+}
+
 /*
 .techniques {
   margin: 0 auto 0;
@@ -206,7 +211,7 @@
   flex-direction: column;
   align-items: center;
   min-height: 790px;
-  padding: 0;
+  padding: 100px 0;
 }
 
 .feynman__image {
@@ -246,6 +251,7 @@
   font-size: 36px;
   font-weight: normal;
   text-decoration: none;
+  color:  #2F80ED;
 }
 
 .kaufman {
@@ -255,8 +261,6 @@
   flex-direction: column;
   color:white;
   background-color:  #1F1F1F;
-  padding-bottom: 90px;
-  z-index: 1;
 }
 
 .section-title_theme_dark {
@@ -266,6 +270,8 @@
   font-size: 60px;
   font-weight: bold;
   margin: 90px auto 20px;
+  z-index: 1;
+
 }
 
 .section-subtitle_theme_dark {
@@ -273,6 +279,8 @@
   font-size: 24px;
   font-weight: normal;
   margin: 0 auto;
+  z-index: 1;
+
 }
 
 /* including elements with key-value modifiers */
@@ -291,11 +299,12 @@
 
 .table__heading_theme_dark {
   color: white;
-  margin: 0;
+  margin: 0 0 20px;
 }
 .table_theme_dark {
   margin: auto;
   padding: 0;
+  z-index: 1;
 }
 
 
@@ -306,11 +315,10 @@
   top: 0;
   width: 660px;
   height: 636px;
-  z-index: -1;
+  z-index: 0;
 }
 
 .footer {
-  min-height: 350px;
   color: white;
   background-color:  #1F1F1F;
   /* padding-top: 150px; */
@@ -323,15 +331,18 @@
   position: relative;
   width: 90%;
   display: flex;
-  margin: auto;
+  margin: 0 auto;
   flex-direction: row;
   justify-content: space-between;
+  min-height: 350px;
+
 }
 
 .footer__column_content_copyright {
   display: flex;
   flex-basis: 711px;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .logo_place_footer {
@@ -342,14 +353,11 @@
 }
 
 .footer__author {
-  margin: 0;
   padding: 18px 0 18px;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  position: absolute;
-  bottom: 0;
-  left: 0;
+
 }
 
 
@@ -358,7 +366,7 @@
   flex-direction: column;
 }
 
-.footer__column_heading {
+.footer__column-heading {
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
@@ -372,7 +380,8 @@
   padding: 0;
   list-style: none;
   margin: 0;
-  display: contents;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer__column_content_social {
@@ -384,6 +393,7 @@
 height: 16px;
 width: 16px;
 text-decoration: none;
+margin-right: 10px;
 }
 
 
