--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -5,5 +5,6 @@
   flex-direction: column;
   color:white;
   background-color:  #1F1F1F;
-  padding-bottom: 90px;
+  padding: 0 0 90px;
+  margin: 0;
 }
