--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,7 +2,8 @@
   display: flex;
   color: white;
   background-color:  #1F1F1F;
-  padding-bottom: 40px;
-  padding-top: 60px;
+  padding: 60px 0 40px;
   min-height: 350px;
+  box-sizing: border-box;
+  margin: 0;
 }
