--- a/pages/index.css
+++ b/pages/index.css
@@ -28,7 +28,7 @@
 @import url(../blocks/video/__iframe/video__iframe.css);
 @import url(../blocks/section-title/section-title.css);
 @import url(../blocks/section-title/_theme/section-title_theme_dark.css);
-@import url(..\blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/section-subtitle/section-subtitle.css);
 @import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
 @import url(../blocks/digits/digits.css);
 @import url(../blocks/cards/cards.css);
