--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -5,6 +5,6 @@
   flex-direction: column;
   align-items: center;
   min-height: 790px;
-  padding: 100px 0;
+  padding: 100px 0 0;
   margin: 0;
 }
