--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -1,7 +1,7 @@
 .oakley {
   background-color: #F2F2F2;
   position: relative;
-  padding: 160px 0 80px;
+  padding: 160px 0 0;
   z-index: 0;
   margin: 0;
 }
