--- a/blocks/two-columns/two-columns.css
+++ b/blocks/two-columns/two-columns.css
@@ -1,7 +1,7 @@
 .two-columns {
   display: flex;
   flex-direction: row;
-  margin: 100px auto 0;
+  margin: 0 auto;
   min-width: 784px;
   max-width: 80%;
   justify-content: space-between;
